tests/correctness/reject/parse_unclosed_bracket.keel
def main(sys: System); Io:
    x = [1, 2, 3
    println(x)
